improved links to background img

--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
             </h2>
 
             <ul class="achievements">
-                <li>🏆 Microsoft Certified: Azure Data Engineer Associate DP-203</li>
-                <li>🏆 Microsoft Certified: Azure Administrator Associate AZ-104</li>
-                <li>🏆 Scala/Spark/Databricks Data Engineering (Atos internal training)</li>
-                <li>🏆 Azure Data Fundamentals DP-900 (Microsoft)</li>
-                <li>🏆 Azure Fundamentals AZ-900 (Microsoft)</li>
-                <li>🏆 SAS Certified Associate: Programming Fundamentals Using SAS 9.4 (SAS Institute)</li>
-                <li>🏆 Python: Biomedical Image Analysis in Python (Datacamp)</li>
-                <li>🏆 Google Cloud Platform Big Data and Machine Learning Fundamentals (Coursera)</li>
+                <li>🏆 dApp Blockchain University: Mentorship Program</li>
+                <li>🏆 dApp Blockchain University: Bootcamp</li>
+                <li>🏆 Azure Data Engineer Associate DP-203</li>
+                <li>🏆 Azure Administrator Associate AZ-104</li>
+                <li>🏆 Azure Data Fundamentals DP-900</li>
+                <li>🏆 Azure Fundamentals AZ-900</li>
+                <li>🏆 SAS Programming Fundamentals</li>
+                <li>🏆 Biomedical Image Analysis in Python</li>
+                <li>🏆 GCP Big Data and Machine Learning Fundamentals (Coursera)</li>
                 <li>🏆 Professional Scrum Master 1 (scrum.org)</li>
             </ul>
         </section>
